--- a/header.html
+++ b/header.html
@@ -52,6 +52,7 @@
       <form action="">
         <div class="detail-area-wrap">
           <div class="detail-area detail-channel-area">
+            <h3 class="blind">검색 대상 채널 설정</h3>
             <fieldset>
               <legend class="blind">검색 대상 채널 설정</legend>
               <div class="search-group search-group-sns">
@@ -170,7 +171,7 @@
             </fieldset>
           </div>
 
-          <div class="search-area clearFix">
+          <div class="detail-area search-area clearFix">
             <div class="search-date-wrap">
               <p class="search-date date-start">
                 <span class="date-title">시작일</span>
