--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
         <span class="menu-line line-3"></span>
       </a>
     </p>
-    <button class="search-slide-btn"></button>
+    <button id="moDetailOpen" class="search-slide-btn"></button>
 
     <div class=" search-area clearFix">
       <div class="search-keyword-wrap">
@@ -52,7 +52,7 @@
       <form action="">
         <div class="detail-area-wrap">
           <div class="detail-area detail-channel-area">
-            <h3 class="blind">검색 대상 채널 설정</h3>
+            <h3 id="moChannelOpen" class="blind">검색 대상 채널 설정</h3>
             <fieldset>
               <legend class="blind">검색 대상 채널 설정</legend>
               <div class="search-group search-group-sns">
