--- a/now.html
+++ b/now.html
@@ -53,7 +53,7 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트 <strong
+                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트<br><strong
                     class="txt-num txt-highlight">30,000</strong> 건을 발견하였습니다.
                 </p>
               </div>
