--- a/now.html
+++ b/now.html
@@ -275,7 +275,7 @@
             <div class="article-inner">
               <div class="tab-wrap">
                 <ul class="tab-list">
-                  <li class="tab-item tab-now now-on"><a href="./now.html">NOW</a></li>
+                  <li class="tab-item tab-now now-on"><a href="./now.html">MMOW</a></li>
                   <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
                   <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
                 </ul>
