--- a/now.html
+++ b/now.html
@@ -30,7 +30,7 @@
             <div class="article-inner">
               <div class="tab-wrap">
                 <ul class="tab-list">
-                  <li class="tab-item tab-now now-on"><a href="./now.html">04011405</a></li>
+                  <li class="tab-item tab-now now-on"><a href="./now.html">NOW</a></li>
                   <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
                   <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
                 </ul>
@@ -72,7 +72,9 @@
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
                   <div class="chart-sample chart-area chart-pie">
+                    <div class="chart-dummy engagement">
 
+                    </div>
                   </div>
                   <div class="chart-info-area">
                     <ul class="chart-info-list">
